apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__response_cache_basic.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can eat on it"
          }
        ]
      }
    ]
  }
}
