apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__response_cache_with_nested_field_set-2.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "allProducts": [
    {
      "name": "Test",
      "createdBy": {
        "__typename": "User",
        "email": "test@test.com",
        "country": {
          "a": "France"
        }
      }
    }
  ]
}
